@startuml

' Абстрактные классы и интерфейсы
abstract class Product {
    +ProductId
    +Name
    +Price
}

' Конкретные классы продуктов
class GamingGPU
class ProfessionalGPU

' Классы для работы с клиентами
class Customer {
    +CustomerId
    +Name
}

' Классы для работы с заказами
class Order {
    +OrderId
    +OrderDate
}

' Классы для работы со складом
class Inventory

' Классы для работы со скидками
class Discount

' Классы для работы с категориями и поставщиками
class Category
class Supplier

' Связи между классами
Product <|-- GamingGPU
Product <|-- ProfessionalGPU
Product "1" -- "1" Inventory
Product "*" -- "1" Category
Product "*" -- "1" Supplier
Product "1" -- "*" OrderItem
Product "*" -- "*" Discount

Order "1" -- "*" OrderItem
Customer "1" -- "*" Order

@enduml 